<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4BC0C6">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:text="@string/user_save_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:layout_height="0dp"
        android:layout_weight="20"/>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/user_save_lastname"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="40"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextLastname" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="18sp"
            android:text="@string/user_save_firstname"
            android:textColor="@android:color/white"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="40"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="60"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:id="@+id/editTextFirstname" />

    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/user_save_login"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="40"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextLogin" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/user_save_password"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="40"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:background="@android:color/white"
                android:id="@+id/editTextPassword" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/user_save_company"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="40"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextCompany" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/user_save_admin"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="40"/>

            <RadioGroup
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/adminYesRadioBtn"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:text="@string/user_save_admin_yes"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:saveEnabled="false"
                    android:textSize="25sp"/>
                <RadioButton
                    android:id="@+id/adminNoRadioBtn"
                    android:layout_width="0dp"
                    android:layout_weight="30"
                    android:text="@string/user_save_admin_no"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content"
                    android:saveEnabled="false"
                    android:textSize="25sp"/>
            </RadioGroup>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_save_submit"
            android:id="@+id/userSaveBtn"
            android:background="#2F7C80"
            android:textColor="@android:color/white"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>