<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4BC0C6">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:text="@string/mcq_save_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:layout_height="0dp"
        android:layout_weight="20"/>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/mcq_save_name"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="text"
                android:layout_margin="5dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextName" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/mcq_save_description"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:layout_margin="5dp"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:inputType="textMultiLine"
                android:background="@android:color/white"
                android:id="@+id/editTextDescription" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:padding="5dp"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="60dp"
                android:text="@string/mcq_save_add_question"
                android:id="@+id/addQuestionBtn"
                android:background="#2F7C80"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal" />

            <Button
                android:padding="5dp"
                android:layout_width="0dp"
                android:layout_weight="50"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:text="@string/mcq_save_submit"
                android:id="@+id/mcqSaveBtn"
                android:background="#2F7C80"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/mcq_save_list_title"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ListView
                android:id="@+id/listView"
                android:layout_margin="5dp"
                android:dividerHeight="5sp"
                android:divider="@android:color/transparent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>