<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4BC0C6">

    <LinearLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="0px" android:layout_height="0px"/>

    <TextView
        android:text="@string/question_save_title"
        android:gravity="center"
        android:layout_width="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:layout_height="0dp"
        android:layout_weight="20"/>

    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/question_save_question"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="25"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="75"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextStatement" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/question_save_option1"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="25"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextOption1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/checkBoxOption1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/question_save_option2"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="25"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextOption2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/checkBoxOption2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/question_save_option3"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="25"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextOption3" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/checkBoxOption3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/question_save_option4"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="25"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextOption4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/checkBoxOption4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="18sp"
                android:text="@string/question_save_option5"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="25"/>

            <EditText
                android:layout_width="0dp"
                android:layout_weight="60"
                android:layout_margin="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:inputType="textMultiLine"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:id="@+id/editTextOption5" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="10"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/checkBoxOption5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:id="@+id/questionSaveBtn"
            android:background="#2F7C80"
            android:text="@string/question_save_submit"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

</LinearLayout>